Instalação do Janitor
Instalação do Janitor e atualização do lock file do renv.

--- a/02-limpeza_de_dados_no_r/index.qmd
+++ b/02-limpeza_de_dados_no_r/index.qmd
@@ -79,4 +79,4 @@ print(report)
 
 As seguintes fontes foram utilizadas:
 
--   [cran.r-project.org](https://cran.r-project.org/web/packages/janitor/vignettes/janitor.html)
+-   [cran.r-project.org - Janitor](https://cran.r-project.org/web/packages/janitor/vignettes/janitor.html)
