[Aula] [Aula] Limpeza de dados no R: Janitor - V2
Correções de espaçamento, nomeclatura de dataframes, indentação de código e apresentação do títulos dos slides.

--- a/limpeza_de_dados_no_r_janitor/index.qmd
+++ b/limpeza_de_dados_no_r_janitor/index.qmd
@@ -18,150 +18,139 @@ format:
 ## Limpeza de dados no R
 
 -   Antes de qualquer análise precisamos fazer a limpeza de dados.
-
 -   O R possui vários `pacotes` para limpeza e transformação de dados.
-
 -   Isso facilita muito todo o processo e garante a **consistência** e **confiabilidade** do estudo.
 
 ## Janitor 
 
-
-O `Janitor` foi desenvolvido tendo em mente os usuários de R do iniciante ao intermediário, é otimizado para facilidade de uso. Segue os princípios do "**tidyverse**" e funciona bem com o **%>%** (pipe).
-
+O `Janitor` foi desenvolvido tendo em mente os usuários de R do iniciante ao intermediário, é otimizado para facilidade de uso. Segue os princípios do "**tidyverse**" e funciona bem com o `%>%` (pipe).
 
 As principais funções: 
 
 - Formata perfeitamente os nomes das colunas data.frame.
-
 - Fornece contagens rápidas de combinações de variáveis.
-
 - Isola e apaga registros duplicados.
 
+## Janitor – `clean_names`
 
-## Janitor 
+Ajusta o nome das colunas com problema de formação, espaços e caracteres inválidos
 
-clean_names() - Ajusta o nome das colunas
-
-
-Colunas com problema:
-
+Exemplo de colunas com problema:
 ```{r}
 print("caseID DOB Other Coluna com Espaço")
 ```
 
-
-Utilizando a função clean_names():
-
+Utilizando a função:
 ```{r, echo = TRUE}
 library(janitor)
-x <- data.frame(caseID = 1, DOB = 2, Other = 3, "Coluna com Espaço" = 4)
-clean_names(x)
+df <- data.frame(caseID = 1, DOB = 2, Other = 3, "Coluna com Espaço" = 4)
+clean_names(df)
 ```
 
-## Janitor
+## Janitor - `get_dupes`
 
-get_dupes() - Apresenta os dados duplicados
-
-Exemplo:
-
+Apresenta os dados duplicados de um data frame:
 ```{r, echo=TRUE}
 library(janitor)
 get_dupes(mtcars, mpg, hp)
 ```
 
-## Janitor
+## Janitor - `tabyl`
 
-tably() - Apresenta contagens rápidas dos dados das tabelas (sendo compatível com o pipe %>% e outros recursos)
+Apresenta contagens rápidas dos dados das tabelas (sendo compatível com o pipe `%>%` e outros recursos):
 ```{r, echo=TRUE}
 library(janitor)
 mtcars %>%
   tabyl(cyl, gear) #o mesmo que tabyl(mtcars, cyl, gear)
 ```
 
-## Janitor
+## Janitor - `compare_df_cols`
 
-compare_df_cols() - Compara as colunas de diferentes data frames e seus tipos
-
+Compara as colunas de diferentes data frames e seus tipos:
 ```{r, echo=TRUE}
 library(dplyr)
 df1 <- data.frame(a = 1:2, b = c("pequeno", "grande"))
-df2 <- data.frame(a = 10:12, b = c("médio", "pequeno", "grande"), c = 0, stringsAsFactors = TRUE) #aqui, a coluna b é um fator
+df2 <- data.frame(a = 10:12, b = c("médio", "pequeno", "grande"), c = 0, stringsAsFactors = TRUE) # no exemplo, a coluna b é um fator
+
 df3 <- df1 %>%
   dplyr::mutate(b = as.character(b))
-
 
 compare_df_cols(df1, df2, df3, return = "mismatch", bind_method = "rbind")
 ```
 
-## Janitor
+## Janitor - `compare_df_cols_same`
 
-compare_df_cols_same() faz a mesma comparação retornando verdadeiro ou falso para a consulta
-
+Executa a mesma comparação retornando verdadeiro ou falso para a consulta:
 ```{r, echo=TRUE}
 library(dplyr)
 df1 <- data.frame(a = 1:2, b = c("pequeno", "grande"))
-df2 <- data.frame(a = 10:12, b = c("médio", "pequeno", "grande"), c = 0, stringsAsFactors = TRUE) #no exemplo, a coluna b é um fator
+df2 <- data.frame(a = 10:12, b = c("médio", "pequeno", "grande"), c = 0, stringsAsFactors = TRUE) # no exemplo, a coluna b é um fator
+
 df3 <- df1 %>%
   dplyr::mutate(b = as.character(b))
 
 compare_df_cols_same(df1, df2, df3)
 ```
 
-## Janitor
+## Janitor - `remove_empty`
 
-remove_empty() - Para casos como a limpeza de arquivos do Excel que contêm linhas e colunas vazias após serem lidos no R
+Para casos como a limpeza de arquivos do Excel que contêm linhas e colunas vazias após serem lidos no R
 
 Data frame com valores em branco:
-
 ```{r}
-q <- data.frame(v1 = c(1, NA, 3),
-                v2 = c(NA, NA, NA),
-                v3 = c("a", NA, "b"),
-                v4 = c("c",NA, NA),
-                V5 = c(NA, NA, 4))
-print(q)
+df <- data.frame(
+  v1 = c(1, NA, 3),
+  v2 = c(NA, NA, NA),
+  v3 = c("a", NA, "b"),
+  v4 = c("c",NA, NA),
+  V5 = c(NA, NA, 4)
+)
+print(df)
 ```
 
-## Janitor
+## Janitor - `remove_empty`
 
 Exemplo do uso do remove_empty removendo colunas e linhas em branco:
-
 ```{r, echo=TRUE}
 library(janitor)
-q <- data.frame(v1 = c(1, NA, 3),
-                v2 = c(NA, NA, NA),
-                v3 = c("a", NA, "b"),
-                v4 = c("c",NA, NA),
-                V5 = c(NA, NA, 4))
-q %>%
+df <- data.frame(
+  v1 = c(1, NA, 3),
+  v2 = c(NA, NA, NA),
+  v3 = c("a", NA, "b"),
+  v4 = c("c",NA, NA),
+  V5 = c(NA, NA, 4)
+)
+df %>%
   remove_empty(c("rows", "cols"))
 ```
 
-## Janitor
+## Janitor - `remove_constant`
 
 Data frame com colunas contendo dados iguais:
-
 ```{r, echo=TRUE}
-c <- data.frame(id = c(1, 2, 3, 4),
-                country = c("Brazil","Brazil","Brazil", "Brazil"),
-                state = c("SP", "SP", "SP", "SP"),
-                client_name = c("João", "Maria", "José", "Fernanda"),
-                sex = c("M", "F", "M", NA))
-print(c)
+df <- data.frame(
+  id = c(1, 2, 3, 4),
+  country = c("Brazil","Brazil","Brazil", "Brazil"),
+  state = c("SP", "SP", "SP", "SP"),
+  client_name = c("João", "Maria", "José", "Fernanda"),
+  sex = c("M", "F", "M", NA)
+  )
+print(df)
 ```
 
-## Janitor
+## Janitor - `remove_constant`
 
 Exemplo do uso do remove_constant() removendo colunas que tem dados iguais:
-
 ```{r, echo=TRUE}
 library(janitor)
-c <- data.frame(id = c(1, 2, 3, 4),
-                country = c("Brazil","Brazil","Brazil", "Brazil"),
-                state = c("SP", "SP", "SP", "SP"),
-                client_name = c("João", "Maria", "José", "Fernanda"),
-                sex = c("M", "F", "M", NA))
-c %>%
+df <- data.frame(
+  id = c(1, 2, 3, 4),
+  country = c("Brazil","Brazil","Brazil", "Brazil"),
+  state = c("SP", "SP", "SP", "SP"),
+  client_name = c("João", "Maria", "José", "Fernanda"),
+  sex = c("M", "F", "M", NA)
+  )
+df %>%
   remove_constant()
 ```
 
